            ESP8266: Remove osprintf for RELEASE=1 
            Networkjs now forwards `socketType` - laying groundwork for UDP over AT command (#1232)
            Added simple RegExp implemention (partial fix #256)
            Speed up JSON.stringify for Arrays, and output non-numeric array elements in REPL (fix #64)
            Bump nRF52-based boards variable count from 2000 to 2500 (fix #1215)
            Ensure Ctrl-C doesn't redraw the input line if it's already empty
            Added String.replace(regex, function) (fix #1256)
            With E.setFlags({pretokenise:1}), ensure stack traces are not tokenised (fix #1258)
            Allow digitalWrite/Read to take an object as an argument (calling .write and .read on it)
            Add `E.getAddressOf` to allow embedded targets to get memory addresses for DMA/etc
            Fix issue where doing a soft reset in the middle of some BLE ops could cause an assert in debug builds

     1v94 : Allow Espruino boards to reset straight out of the DFU Bootloader             
            Improvements in handling errors in code running in IRQs
             - if writing to disconnected Bluetooth device, throw data away immediately
             - Drop chars if output buffer is full while waiting in an IRQ
             - Handle out of memory errors in jsvCreateNewChild
             - Do not garbage collect inside an IRQ
            On nRF52 devices, allow button press at boot to clear out peer manager data
            Work out length of typed array with offset correctly (fix #1204)
            nRF5x: Add Watchdog timer handling
            nRF52: start new connections on idle to ease memory allocation conflicts between code execution & IRQs
            nRF52: Ignore INVALID_STATE from CONN_PARAM_UPDATE_REQUEST (it can happen if we disconnect and then SD requests an update)
            Fix Date.toString for dates before 1970
            STM32: Fix handling of months when setting the internal RTC