@@ -19,13 +19,14 @@
             Networkjs now forwards `socketType` - laying groundwork for UDP over AT command (#1232)
             Added simple RegExp implemention (partial fix #256)
             Speed up JSON.stringify for Arrays, and output non-numeric array elements in REPL (fix #64)
-            Bump nRF52-based boards variable count from 2000 to 2500 (fix #1215)
+            nRF5x: Bump nRF52-based boards variable count from 2000 to 2500 (fix #1215)
             Ensure Ctrl-C doesn't redraw the input line if it's already empty
             Added String.replace(regex, function) (fix #1256)
             With E.setFlags({pretokenise:1}), ensure stack traces are not tokenised (fix #1258)
             Allow digitalWrite/Read to take an object as an argument (calling .write and .read on it)
             Add `E.getAddressOf` to allow embedded targets to get memory addresses for DMA/etc
-            Fix issue where doing a soft reset in the middle of some BLE ops could cause an assert in debug builds
+            nRF5x: Fix issue where doing a soft reset in the middle of some BLE ops could cause an assert in debug builds
+            nRF5x: Manufacturer Data is now decoded in advertising packets
 
      1v94 : Allow Espruino boards to reset straight out of the DFU Bootloader             
             Improvements in handling errors in code running in IRQs
